# int20h-2023

./: .env.sample  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  HELP.md  pom.xml
api/src/main/java/com/example/api/Configurations/: SimpleMongoConfig.java
api/src/main/java/com/example/api/Controllers/: UserController.java
api/src/main/java/com/example/api/Entities/: Flowers.java  User.java
api/src/main/resources/: application.properties
api/src/test/java/com/example/api/: ApiApplicationTests.java
main-back/: .dockerignore  Dockerfile  README.md  pyproject.toml
main-back/main_back/: asgi.py  settings.py  urls.py  wsgi.py
main-back/test_app/: urls.py  views.py
main-back/test_app/templates/test_app/: hello_world.html
main-back/website/: admin.py  forms.py  models.py  urls.py  views.py
main-back/website/migrations/: 0001_initial.py  0002_alter_participation_to_alter_profile_skills_and_more.py  0003_invitation.py  0004_joinrequest.py  0005_invitation_comment_invitation_status.py  0006_remove_invitation_sent_by_alter_invitation_user.py
main-back/website/static/css/: unique.css
main-back/website/static/js/: scripts.js
main-back/website/templates/test_app/: base.html  login.html  profile.html  projects.html  reg_back.html  register.html  user_projects.html  users.html
main-back/website/templates/website/: all_projects_page.html  base.html  profile.html  profile_info.html  profile_projects.html  project_detail.html  project_page.html  projects.html  user_projects.html  users.html
(+1 files in other folders)
